# dropt

./: CMakeLists.txt  INSTALL  LICENSE  README.html  README.md  dropt_example.c  droptxx_example.cpp  make.cmd  package.cmd
dropt/: LICENSE  Makefile.clang  Makefile.gcc  Makefile.vcwin32  README  README.html  dropt.c  dropt.h  dropt_example.c  dropt_handlers.c  dropt_string.c  dropt_string.h  droptxx.cpp  droptxx.hpp  gmake.mk  make.cmd  package.cmd  test_dropt.c
include/: dropt.h  dropt_string.h  droptxx.hpp
lib/include/: dropt.c  dropt.h  dropt_handlers.c  dropt_string.c  dropt_string.h  flopt.c  flopt.h  flopt_string.c  flopt_string.h  options.c  options.h  utilChar.h
packaging/: pkgconfig.pc.in
src/: dropt.c  dropt_handlers.c  dropt_string.c  droptxx.cpp  test_dropt.c
